--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -4,6 +4,7 @@
   width: 100%;
   background-color: var(--primary-color);
   font-family: "Sora";
+  z-index: 999;
   .nav {
     position: relative;
     width: 100%;
