--- a/src/components/Hero/style.module.scss
+++ b/src/components/Hero/style.module.scss
@@ -61,9 +61,10 @@
             z-index: 1;
             @media (max-width: 850px){
                 width: 100%;
-                text-align: center;
                 display: flex;
-                justify-content: center;
+                justify-content: start;
+                text-align: start;
+                flex-direction: column;
             }
             h1{
                 max-width: 600px;
