--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
   --p-text-secondary: #71717A;
   --card-color: #000000;
   --text-hover: #ffffff;
+  --small-text-color: #D4D4D8;
 }
 body.dark{
   --primary-color: #151515;
