--- a/src/components/Hero/style.module.scss
+++ b/src/components/Hero/style.module.scss
@@ -1,185 +1,219 @@
-.hero{
+.hero {
+  width: 100%;
+  background-color: var(--primary-color);
+  font-family: "Sora";
+  .line {
+    height: 1px;
+    margin-bottom: 20px;
     width: 100%;
-    background-color: var(--primary-color);
-    font-family: 'Sora';
-    &__wrapper{
-        position: relative;
+    position: relative;
+    z-index: 9;
+    svg {
+      width: 100%;
+      height: 500px;
+      position: absolute;
+      top: -250px;
+      path {
+        stroke: black;
+        stroke-width: 2px;
+        fill: none;
+      }
+    }
+    .box {
+      height: 40px;
+      width: 100%;
+      position: relative;
+      top: -20px;
+      z-index: 1;
+      &:hover {
+        height: 500px;
+        top: -250px;
+      }
+    }
+  }
+  &__wrapper {
+    position: relative;
+    width: 100%;
+    min-height: calc(100vh - 90px);
+    margin-top: 90px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    @media (max-width: 850px) {
+      flex-direction: column-reverse;
+      gap: 3rem;
+    }
+    .herosvg {
+      position: absolute;
+      opacity: 0.75;
+      z-index: 0;
+      &:nth-child(1) {
+        top: 10%;
+        left: 5%;
+      }
+      &:nth-child(2) {
+        top: 25%;
+        left: 35%;
+      }
+      &:nth-child(3) {
+        top: 15%;
+        right: 3%;
+      }
+      &:nth-child(4) {
+        bottom: 5%;
+        right: 15%;
+      }
+      &:nth-child(5) {
+        bottom: 15%;
+        right: 50%;
+      }
+      &:nth-child(6) {
+        bottom: 7%;
+        left: 15%;
+      }
+      &:nth-child(7) {
+        top: 50%;
+        left: 2%;
+      }
+      &:nth-child(8) {
+        top: 50%;
+        left: 50%;
+      }
+      &:nth-child(9) {
+        top: 15%;
+        left: 60%;
+      }
+    }
+    &_text {
+      width: 40%;
+      z-index: 1;
+      @media (max-width: 850px) {
         width: 100%;
-        min-height: calc(100vh - 90px);
-        margin-top: 90px;
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
-        @media (max-width: 850px){
-            flex-direction: column-reverse;
-            gap: 3rem;
+        justify-content: start;
+        text-align: start;
+        flex-direction: column;
+      }
+      h1 {
+        max-width: 600px;
+        font-size: 48px;
+        font-weight: 400;
+        line-height: 56px;
+        text-transform: capitalize;
+        color: var(--p-text-primary);
+        @media (max-width: 850px) {
+          font-size: 40px;
         }
-        .herosvg{
-            position: absolute;
-            opacity: .75;
-            z-index: 0;
-            &:nth-child(1){
-                top: 10%;
-                left: 5%;
-            }
-            &:nth-child(2){
-                top: 25%;
-                left: 35%;
-            }
-            &:nth-child(3){
-                top: 15%;
-                right: 3%;
-            }
-            &:nth-child(4){
-                bottom: 5%;
-                right: 15%;
-            }
-            &:nth-child(5){
-                bottom: 15%;
-                right: 50%;
-            }
-            &:nth-child(6){
-                bottom: 7%;
-                left: 15%;
-            }
-            &:nth-child(7){
-                top: 50%;
-                left: 2%;
-            }
-            &:nth-child(8){
-                top: 50%;
-                left: 50%;
-            }
-            &:nth-child(9){
-                top: 15%;
-                left: 60%;
-            }
-        }
-        &_text{
-            width: 40%;
-            z-index: 1;
-            @media (max-width: 850px){
-                width: 100%;
-                display: flex;
-                justify-content: start;
-                text-align: start;
-                flex-direction: column;
-            }
-            h1{
-                max-width: 600px;
-                font-size: 48px;
-                font-weight: 400;
-                line-height: 56px;
-                text-transform: capitalize;
-                color: var(--p-text-primary);
-                @media (max-width: 850px){
-                    font-size: 40px;
-                }
-                span{
-                    &:nth-child(1){
-                        font-weight: 800;
-                    }
-                    &:nth-child(2){
-                        font-weight: 800;
-                        color: var(--p-text-primary);
-                        -webkit-text-fill-color: var(--primary-color); /* Will override color (regardless of order) */
-                        -webkit-text-stroke: 2px;
-                    }
-                    &:nth-child(3){
-                        font-weight: 800;
-                    }
-                }
-            }
-            p{
-                color: var(--p-text-secondary);
-                margin-top: 2rem;
-                font-size: 16px;
-                font-weight: 400;
-                line-height: 24px;
-                letter-spacing: 0.32px; 
-            }
-            &_socials{
-                display: flex;
-                justify-content: start;
-                align-items: center;
-                gap: 1rem;
-                margin-top: 2rem;
-                &_social{
-                    position: relative;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    width: 45px;
-                    height: 45px;
-                    font-size: 22px;
-                    color: var(--p-text-primary);
-                    border-radius: 4px;
-                    background-color: transparent;
-                    outline: none;
-                    border: 2px solid var(--p-text-primary);
-                    cursor: pointer;
-                    span{
-                        width: 100%;
-                        height: 100%;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                    }
-                    &::before{
-                        content: "";
-                        position: absolute;
-                        z-index: -1;
-                        width: 100%;
-                        height: 100%;
-                        top: 0;
-                        left: 0;
-                        transition: .3s linear;
-                        -webkit-transition: .3s linear;
-                        -moz-transition: .3s linear;
-                        -ms-transition: .3s linear;
-                        -o-transition: .3s linear;
-                        background-color: var(--p-text-primary);
-                        clip-path: circle(3rem at 50% 200%);
-                    }
-                    &:hover::before{
-                        clip-path: circle(100%);
-                    }
-                    &:not(:hover)::before{
-                        animation-name: animateBtnBg;
-                        animation-duration: .5s;
-                        animation-iteration-count: 1;
-                        animation-timing-function: linear;
-                    }
-                    &:hover{
-                    color: var(--primary-color);
-                    }
-                }
-            }
-        }
-        &_image{
-          width: 55%;
-          display: flex;
-          justify-content: start;
-          align-items: center;
-          z-index: 1;
-          @media (max-width: 850px){
-            width: 90%;
-        }
-          img{
-            width: 100% !important;
-            height: 100% !important;
+        span {
+          &:nth-child(1) {
+            font-weight: 800;
+          }
+          &:nth-child(2) {
+            font-weight: 800;
+            color: var(--p-text-primary);
+            -webkit-text-fill-color: var(
+              --primary-color
+            ); /* Will override color (regardless of order) */
+            -webkit-text-stroke: 2px;
+          }
+          &:nth-child(3) {
+            font-weight: 800;
           }
         }
+      }
+      p {
+        color: var(--p-text-secondary);
+        margin-top: 2rem;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.32px;
+      }
+      &_socials {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        gap: 1rem;
+        margin-top: 2rem;
+        &_social {
+          position: relative;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 45px;
+          height: 45px;
+          font-size: 22px;
+          color: var(--p-text-primary);
+          border-radius: 4px;
+          background-color: transparent;
+          outline: none;
+          border: 2px solid var(--p-text-primary);
+          cursor: pointer;
+          span {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+          &::before {
+            content: "";
+            position: absolute;
+            z-index: -1;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            transition: 0.3s linear;
+            -webkit-transition: 0.3s linear;
+            -moz-transition: 0.3s linear;
+            -ms-transition: 0.3s linear;
+            -o-transition: 0.3s linear;
+            background-color: var(--p-text-primary);
+            clip-path: circle(3rem at 50% 200%);
+          }
+          &:hover::before {
+            clip-path: circle(100%);
+          }
+          &:not(:hover)::before {
+            animation-name: animateBtnBg;
+            animation-duration: 0.5s;
+            animation-iteration-count: 1;
+            animation-timing-function: linear;
+          }
+          &:hover {
+            color: var(--primary-color);
+          }
+        }
+      }
     }
+    &_image {
+      width: 55%;
+      display: flex;
+      justify-content: start;
+      align-items: center;
+      z-index: 1;
+      @media (max-width: 850px) {
+        width: 90%;
+      }
+      img {
+        width: 100% !important;
+        height: 100% !important;
+        box-shadow: 10px 10px;
+      }
+    }
+  }
 }
 
 @keyframes animateBtnBg {
-    0%{
-        clip-path: circle(100%);
-    } 99.9%{
-        clip-path: circle(3rem at 50% -200%);
-    } 100%{
-        clip-path: circle(3rem at 50% 200%);
-    }
+  0% {
+    clip-path: circle(100%);
+  }
+  99.9% {
+    clip-path: circle(3rem at 50% -200%);
+  }
+  100% {
+    clip-path: circle(3rem at 50% 200%);
+  }
 }
