--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,9 @@ body.dark{
   --card-color: #ffffff;
   --text-hover: #000000;
 }
+body{
+  background-color: var(--primary-color);
+}
 .container{
   max-width: 1440px;
   padding-left: 80px;
