--- a/src/components/Hero/style.module.scss
+++ b/src/components/Hero/style.module.scss
@@ -7,14 +7,16 @@
     margin-bottom: 20px;
     width: 100%;
     position: relative;
-    z-index: 9;
+    @media (max-width: 850px){
+      display: none;
+    }
     svg {
       width: 100%;
       height: 500px;
       position: absolute;
       top: -250px;
       path {
-        stroke: black;
+        stroke: var(--p-text-primary);
         stroke-width: 2px;
         fill: none;
       }
@@ -105,6 +107,9 @@
         @media (max-width: 850px) {
           font-size: 40px;
         }
+        @media (max-width: 600px) {
+          text-align: center;
+        }
         span {
           &:nth-child(1) {
             font-weight: 800;
@@ -129,6 +134,9 @@
         font-weight: 400;
         line-height: 24px;
         letter-spacing: 0.32px;
+        @media (max-width: 600px) {
+          text-align: center;
+        }
       }
       &_socials {
         display: flex;
@@ -136,6 +144,9 @@
         align-items: center;
         gap: 1rem;
         margin-top: 2rem;
+        @media (max-width: 600px) {
+          justify-content: center;
+        }
         &_social {
           position: relative;
           display: flex;
