--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,9 @@ body{
     padding-right: 40px;
   }
 }
+@media (max-width: 850px) {
+  .container{
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
