--- a/src/components/Hero/style.module.scss
+++ b/src/components/Hero/style.module.scss
@@ -109,6 +109,7 @@
         }
         @media (max-width: 600px) {
           text-align: center;
+          font-size: 32px;
         }
         span {
           &:nth-child(1) {
@@ -161,6 +162,10 @@
           outline: none;
           border: 2px solid var(--p-text-primary);
           cursor: pointer;
+          @media (max-width: 600px) {
+            width: 55px;
+            height: 55px;
+          }
           span {
             width: 100%;
             height: 100%;
