--- a/src/components/Skills/style.module.scss
+++ b/src/components/Skills/style.module.scss
@@ -45,6 +45,9 @@
             margin-top: 3rem;
             svg{
                 position: absolute;
+                @media (max-width: 457px){
+                    display: none;
+                }
                 &:nth-child(1){
                     bottom: 0%;
                     left: 0%;
@@ -78,6 +81,10 @@
                     gap: 2rem;
                     width: 185px;
                     height: 185px;
+                    @media (max-width: 457px){
+                        width: 220px;
+                        height: 220px;
+                    }
                     border: 2px solid var(--p-text-primary);
                     border-radius: 4px;
                     color: var(--p-text-primary);
@@ -111,10 +118,14 @@
                     height: 193px;
                     border: 2px solid var(--p-text-primary);
                     position: absolute;
-                    top: -8px;
+                    top: -10px;
                     left: 0px; 
                     border-radius: 4px;
                     z-index: 0 !important;
+                    @media (max-width: 457px){
+                        width: 230px;
+                        height: 230px;
+                    }
                 }
                 &_outer2{
                     width: 193px;
@@ -125,6 +136,10 @@
                     right: 0px; 
                     border-radius: 4px;
                     z-index: 0 !important;
+                    @media (max-width: 457px){
+                        width: 230px;
+                        height: 230px;
+                    }
                 }
                 // &:hover{
                 // color: var(--primary-color);
