--- a/src/components/Skills/style.module.scss
+++ b/src/components/Skills/style.module.scss
@@ -23,6 +23,9 @@
             }
             svg{
                 transform: scale(.75);
+                @media (max-width: 457px){
+                    display: none;
+                }
                 &:nth-child(1){
                     transform: scale(.75) rotate(160deg);
                     @media (max-width: 550px){
