--- a/src/components/Experiences/style.module.scss
+++ b/src/components/Experiences/style.module.scss
@@ -18,6 +18,9 @@
         flex-direction: column;
         gap: 2rem;
         margin-top: 2rem;
+        @media (max-width: 850px){
+          width: 100%;
+        }
         &_card{
             width: 100%;
             display: flex;
@@ -26,11 +29,15 @@
             border-radius: 10px; 
             border: 1px solid var(--p-text-secondary);
             gap: 1rem;
+            @media (max-width: 850px){
+              padding: 20px 18px;
+            }
             &_top{
                 width: 100%;
                 display: flex;
                 align-items: center;
                 justify-content: start;
+                flex-wrap: wrap;
                 gap: .5rem;
                 img{
                     object-fit: contain;
@@ -42,6 +49,9 @@
                         font-weight: 600;
                         line-height: 28px;
                         letter-spacing: -0.48px; 
+                        @media (max-width: 850px){
+                          width: 100%;
+                        }
                     }
                     &:nth-child(3){
                         font-size: 14px;
