--- a/src/components/Hero/style.module.scss
+++ b/src/components/Hero/style.module.scss
@@ -50,6 +50,9 @@
       position: absolute;
       opacity: 0.75;
       z-index: 0;
+      @media (max-width: 850px){
+        display: none;
+      }
       &:nth-child(1) {
         top: 10%;
         left: 5%;
