--- a/src/components/Skills/style.module.scss
+++ b/src/components/Skills/style.module.scss
@@ -48,7 +48,9 @@
             margin-top: 3rem;
             svg{
                 position: absolute;
-
+                @media (max-width: 850px){
+                    display: none;
+                }
                 &:nth-child(1){
                     bottom: 0%;
                     left: 0%;
@@ -105,6 +107,9 @@
                     }
                     svg{
                         position: relative;
+                        @media (max-width: 850px){
+                            display: flex;
+                        }
                     }
                     h1{
                         font-size: 20px;
