--- a/src/components/About/style.module.scss
+++ b/src/components/About/style.module.scss
@@ -14,7 +14,7 @@
 .about_image {
   width: max-content;
   border-top-width: 2px !important;
-  border: 3.5px solid #000;
+  border: 3.5px solid var(--p-text-primary);
   border-radius: 10px;
 }
 
@@ -25,6 +25,7 @@
 .about h1 {
   font-family: "Sora";
   font-size: 48px;
+  color: var(--p-text-primary);
   font-weight: 400;
   line-height: 56px;
   letter-spacing: -0.96px;
@@ -34,7 +35,7 @@
 }
 
 .about p {
-  color: var(--Zinc-500, #71717a);
+  color: var(--descr-color);
   font-size: 16px;
   font-style: normal;
   margin: 20px 0;
