--- a/src/components/Testimonials/style.module.scss
+++ b/src/components/Testimonials/style.module.scss
@@ -2,8 +2,80 @@
   padding: 40px 0;
 }
 
+.testimonials_card {
+  padding: 0 20px;
+  margin: 40px 0;
+}
+
+.testimonials_card_style {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 30px;
+  background: var(--text-hover);
+  color: var(--card-color);
+  text-align: center;
+  border-radius: 30px;
+}
+
+.blackCard .testimonials_card_style {
+  background: var(--card-color) !important;
+  color: var(--text-hover);
+}
+
+.testimonials_card_img {
+  display: flex;
+  justify-content: center;
+  margin: 40px 0 24px 0;
+}
+
+.testimonials_card_descr {
+  margin: 24px 0;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.32px;
+}
+
+.testimonials_card_style hr {
+  width: 70%;
+  border: solid;
+  border-width: 0.13em;
+  border-radius: 1px;
+  margin: 0 auto;
+}
+
+.testimonials_card_name {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+  margin: 24px 0;
+  letter-spacing: -0.4px;
+  text-transform: capitalize;
+}
+
+.testimonials_card_profession {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
+  margin-bottom: 40px;
+  letter-spacing: -0.32px;
+}
+
+.slick-prev,
+.slick-next {
+  display: none !important;
+  z-index: -9 !important;
+}
+
+.slick-dots li > button {
+  font-size: 15px;
+}
+
 .testimonials h1 {
   text-align: center;
+  color: var(--card-color);
   font-family: "Sora";
   font-size: 48px;
   font-weight: 400;
