--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: Sora;
 }
 *,
 *::before,
@@ -29,6 +30,7 @@ body.dark {
   --text-hover: #000000;
   --slider-color: #f5f5f5;
 }
+
 body {
   background-color: var(--primary-color);
 }
