--- a/src/components/Hero/style.module.scss
+++ b/src/components/Hero/style.module.scss
@@ -4,10 +4,11 @@
   font-family: "Sora";
   .line {
     height: 1px;
+    z-index: 99999999999999999999999999999999999999999999999999 !important;
     margin-bottom: 20px;
     width: 100%;
     position: relative;
-    @media (max-width: 850px){
+    @media (max-width: 850px) {
       display: none;
     }
     svg {
@@ -50,7 +51,7 @@
       position: absolute;
       opacity: 0.75;
       z-index: 0;
-      @media (max-width: 850px){
+      @media (max-width: 850px) {
         display: none;
       }
       &:nth-child(1) {
