--- a/src/components/Hero/style.module.scss
+++ b/src/components/Hero/style.module.scss
@@ -36,7 +36,7 @@
   &__wrapper {
     position: relative;
     width: 100%;
-    min-height: calc(100vh - 90px);
+    height: calc(100vh - 90px);
     margin-top: 90px;
     display: flex;
     justify-content: space-between;
