--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -95,18 +95,40 @@
   font-size: 20px;
 }
 
+.project:last-child {
+  margin-bottom: -410px;
+  z-index: 9 !important;
+  background: #00000075;
+}
+
+.project:last-child * {
+  z-index: 1 !important;
+}
+
 .view_more {
-  z-index: 999999999 !important;
+  position: relative;
+  z-index: 3 !important;
   width: 100%;
-  padding: 40px 0;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  background: url("https://www.pngall.com/wp-content/uploads/15/Black-Shadow.png"),
+    no-repeat;
+  background-position-y: 210%;
+  height: 250px;
   display: flex;
+  align-items: end;
   justify-content: center;
+  background-size: cover;
+  padding: 40px 0 100px 0;
+  text-align: center;
 }
 
 .view_more button {
-  padding: 10px 20px;
+  padding: 15px 20px;
   font-family: Sora;
-  font-size: 19px;
+  box-shadow: rgba(255, 255, 255, 0.3) 0px 1px 2px 0px,
+    rgba(255, 255, 255, 0.15) 0px 2px 6px 2px;
+  font-size: 21px;
   background: #fff;
   color: #000;
   border: none;
@@ -130,5 +152,13 @@
     width: 100%;
     height: 300px;
     object-fit: cover;
+  }
+  .project:last-child {
+    margin-bottom: -750px;
+  }
+  .view_more {
+    background-position: bottom;
+    height: 200px;
+    padding-bottom: 50px;
   }
 }
