--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -7,19 +7,6 @@
 //   overflow: hidden;
 // }
 
-// .projects h1:nth-of-type(1) {
-//   text-align: center;
-//   font-family: "Sora";
-//   font-size: 48px;
-//   color: #fff;
-//   font-weight: 400;
-//   line-height: 56px;
-//   letter-spacing: -0.96px;
-//   span {
-//     font-weight: 800;
-//   }
-// }
-
 // .project {
 //   display: flex;
 //   align-items: start;
@@ -132,7 +119,21 @@
 //     object-fit: cover;
 //   }
 // }
-.main{
+.main {
   position: relative;
-  margin-top: 50vh;
+  background: #000;
+  color: #fff;
+  padding: 40px 0;
+  h1:nth-of-type(1) {
+    text-align: center;
+    font-family: "Sora";
+    font-size: 48px;
+    color: #fff;
+    font-weight: 400;
+    line-height: 56px;
+    letter-spacing: -0.96px;
+    span {
+      font-weight: 800;
+    }
+  }
 }
