--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,24 @@ body.dark {
 body {
   background-color: var(--primary-color);
 }
+
+body::-webkit-scrollbar {
+  width: 4px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #888;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+body {
+  scrollbar-width: 2px;
+  scrollbar-color: #888 #f1f1f1;
+}
+
 .container {
   max-width: 1440px;
   margin: 0 auto;
