--- a/src/components/Card/style.module.scss
+++ b/src/components/Card/style.module.scss
@@ -15,6 +15,15 @@
       padding:50px;
       transform-origin: top;
       box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      @media (max-width: 850px){
+        width: 90%;
+      }
+      @media (max-width: 650px){
+        width: 100%;
+      }
+      @media (max-width: 500px){
+        padding: 20px
+      }
       h2{
         text-align: center;
         margin: 0px;
@@ -25,11 +34,18 @@
         height: 100%;
         margin-top: 50px;
         gap: 50px;
-  
+        @media (max-width: 650px){
+          flex-direction: column-reverse;
+          gap: 20px;
+          margin-top: 20px;
+        }
         .description{
           width: 40%;
           position: relative;
           top: 10%;
+          @media (max-width: 650px){
+            width: 100%;
+          }
           p{
             font-size: 16px;
             &::first-letter{
@@ -39,12 +55,18 @@
           }
           span{
             display: flex;
+            justify-content: center;
             align-items: center;
-            gap: 5px;
-            a{
-              font-size: 12px;
-              text-decoration: underline;
-              cursor: pointer;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            cursor: pointer;
+            background-color: transparent;
+            margin-top: 10px;
+            font-size: 32px;
+            &:hover{
+              background-color: white;
+              mix-blend-mode
             }
           }
         }
@@ -56,6 +78,9 @@
           max-height: 300px;
           border-radius: 25px;
           overflow: hidden;
+          @media (max-width: 650px){
+            width: 100%;
+          }
           .inner{
             width: 100%;
             height: 100%;
