--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -129,6 +129,7 @@
     font-weight: 400;
     line-height: 56px;
     letter-spacing: -0.96px;
+    color: var(--p-text-primary);
     span {
       font-weight: 800;
     }
