--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -12,42 +12,43 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    &__toggle{
+    &__toggle {
       display: none;
       background-color: transparent;
       border: none;
       outline: none;
       cursor: pointer;
       color: var(--p-text-primary);
-      @media (max-width: 850px){
+      @media (max-width: 850px) {
         display: flex;
       }
     }
-    .indicator{
-        width: 50px;
-        height: 3px;
-        background-color: var(--p-text-primary);
-        position: absolute;
-        left: 15px;
-        bottom: 25%;
-        transform: translateX(-50%);
-        border-radius: 25px;
-        transition: all .25s linear;
-        -webkit-transition: all .25s linear;
-        -moz-transition: all .25s linear;
-        -ms-transition: all .25s linear;
-        -o-transition: all .25s linear;
-        @media (max-width: 850px){
-          display: none;
-        }
+    .indicator {
+      width: 50px;
+      height: 3px;
+      background-color: var(--p-text-primary);
+      position: absolute;
+      left: 15px;
+      bottom: 25%;
+      transform: translateX(-50%);
+      border-radius: 25px;
+      transition: all 0.25s linear;
+      -webkit-transition: all 0.25s linear;
+      -moz-transition: all 0.25s linear;
+      -ms-transition: all 0.25s linear;
+      -o-transition: all 0.25s linear;
+      @media (max-width: 850px) {
+        display: none;
+      }
     }
-    &__logo{
-        h1{
-            color: var(--p-text-primary);
-        }
+    &__logo {
+      h1 {
+        color: var(--p-text-primary);
+        cursor: pointer;
+      }
     }
     ul {
-      @media (max-width: 850px){
+      @media (max-width: 850px) {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -58,9 +59,9 @@
         right: 0;
         overflow: hidden;
         background-color: var(--primary-color);
-        transition: .3s linear;
+        transition: 0.3s linear;
         opacity: 0;
-        &.headerOpen{
+        &.headerOpen {
           top: 90px;
           opacity: 1;
         }
@@ -73,21 +74,21 @@
         font-weight: 600;
         cursor: pointer;
         color: var(--p-text-primary);
-        @media (max-width: 850px){
+        @media (max-width: 850px) {
           float: none;
           max-width: 200px;
           text-align: center;
         }
       }
     }
-    &__actions{
-        button{
+    &__actions {
+      button {
         background-color: transparent;
         border: none;
         outline: none;
         cursor: pointer;
         color: var(--p-text-primary);
-        }
+      }
     }
   }
 }
