--- a/src/components/Hero/style.module.scss
+++ b/src/components/Hero/style.module.scss
@@ -3,9 +3,11 @@
   background-color: var(--primary-color);
   font-family: "Sora";
   .line {
-    height: 1px;
+    height: 0px;
     margin-bottom: 20px;
     width: 100%;
+    background: transparent;
+    color: transparent;
     position: relative;
     @media (max-width: 850px) {
       display: none;
@@ -17,7 +19,7 @@
       top: -250px;
       path {
         stroke: var(--p-text-primary);
-        stroke-width: 2px;
+        stroke-width: 0px;
         fill: none;
       }
     }
