--- a/src/components/Contact/style.module.scss
+++ b/src/components/Contact/style.module.scss
@@ -164,6 +164,14 @@
     margin-top: 30px;
     margin-bottom: -30px;
   }
+  .contact_text h1:first-child {
+    text-align: center;
+    font-size: 52px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 56px;
+    letter-spacing: -0.96px;
+  }
 
   .contact__wrapper_text_socials {
     display: block;
