--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -5,6 +5,7 @@
   background-color: var(--primary-color);
   font-family: "Sora";
   z-index: 999;
+  padding-left: 15px;
   .nav {
     position: relative;
     width: 100%;
