--- a/src/components/Statistics/style.module.scss
+++ b/src/components/Statistics/style.module.scss
@@ -27,7 +27,9 @@
             align-items: center;
             flex-wrap: wrap;
             gap: 1rem;
+            margin-top: 3rem;
             &_stat{
+                position: relative;
                 width: calc(100% / 4 - 1rem);
                 display: flex;
                 justify-content: center;
@@ -37,11 +39,26 @@
                 height: 200px;
                 color: white;
                 p{
-                    font-size: 20px;
+                    position: absolute;
+                    width: 100%;
+                    text-align: center;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    font-size: 16px;
+                    backdrop-filter: blur(3px) brightness(75%);
                 }
                 h1{
-                    font-size: 64px;
+                    font-size: 82px;
                     font-weight: 800;
+                    color: white;
+                    // span.plusIcon{
+                    //     position: absolute;
+                    //     color: white;
+                    //     transform: translate(-50%, -50%);
+                    //     font-size: 46px;
+                    //     font-weight: 400;
+                    // }
                 }
             }
         }
