--- a/src/components/Students/style.module.scss
+++ b/src/components/Students/style.module.scss
@@ -1,10 +1,11 @@
 .testimonials {
-  padding: 40px 0;
+  padding-top: 5rem;
+  padding-bottom: 3rem;
 }
 
 .testimonials_card {
   padding: 0 10px;
-  margin: 20px 0;
+  margin: 40px 0;
 }
 
 .testimonials_card_style {
