--- a/src/components/Hero/style.module.scss
+++ b/src/components/Hero/style.module.scss
@@ -109,7 +109,7 @@
         }
       }
       p {
-        color: var(--p-text-secondary);
+        color: var(--descr-color);
         margin-top: 2rem;
         font-size: 16px;
         font-weight: 400;
@@ -195,9 +195,13 @@
       z-index: 0;
       @media (max-width: 850px) {
         width: 100%;
+        margin: 20px 0 -10px 0 !important;
       }
       img {
         width: 100% !important;
+        border-radius: 50% !important;
+        filter: grayscale(50%);
+        border: 2px solid var(--p-text-primary);
         height: 100% !important;
       }
     }
