--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -1,4 +1,14 @@
+.shrink {
+  transition: 0.2s all;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  .nav {
+    transition: 0.2s all;
+    height: 80px !important;
+  }
+}
+
 .header {
+  transition: 0.2s all;
   position: fixed;
   top: 0;
   width: 100%;
@@ -7,6 +17,7 @@
   z-index: 999;
   padding-left: 12px;
   .nav {
+    transition: 0.2s all;
     position: relative;
     width: 100%;
     height: 90px;
