--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -1,12 +1,4 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css");
-
-.projects {
-  background: #000 !important;
-  color: #fff;
-  padding: 20px 0 0 0;
-  overflow: hidden;
-}
-
 // .project {
 //   display: flex;
 //   align-items: start;
@@ -122,6 +114,7 @@
 .main {
   position: relative;
   padding: 40px 0;
+  min-height: 100vh;
   h1:nth-of-type(1) {
     text-align: center;
     font-family: "Sora";
