--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,6 +58,11 @@ body {
   padding-left: 80px;
   padding-right: 80px;
 }
+
+.content {
+  width: 100%;
+  height: calc(100vh - 90px - 133px);
+}
 @media (max-width: 1000px) {
   .container {
     padding-left: 40px;
