--- a/src/components/Contact/style.module.scss
+++ b/src/components/Contact/style.module.scss
@@ -172,6 +172,8 @@
   flex-direction: column;
   b{
     margin-top: 1rem;
+    font-size: 19px;
+    color: var(--card-color);
   }
 }
 .contact_text p {
