--- a/src/components/Hero/style.module.scss
+++ b/src/components/Hero/style.module.scss
@@ -125,6 +125,32 @@
         align-items: center;
         gap: 1rem;
         margin-top: 2rem;
+        .testingButton{
+          position: relative;
+          width: 140px;
+          height: 50px;
+          border-radius: 4px;
+          outline: none;
+          border: 1px solid black;
+          background-color: transparent;
+          overflow: hidden;
+          &::before{
+            content: "";
+            position: absolute;
+            top: var(--y);
+            left: var(--x);
+            transform: translate(-50%, -50%);
+            width: 0;
+            height: 0;
+            border-radius: 50%;
+            background: red;
+            transition: width 0.5s, height 0.5s;
+          }
+          &:hover::before{
+            width: 500px;
+            height: 500px;
+          }
+        }
         @media (max-width: 600px) {
           justify-content: center;
         }
