--- a/src/components/Skills/style.module.scss
+++ b/src/components/Skills/style.module.scss
@@ -41,10 +41,10 @@
       position: relative;
       width: 100%;
       display: flex;
-      justify-content: space-between;
+      justify-content: space-evenly;
       align-items: center;
       flex-wrap: wrap;
-      gap: 3rem;
+      gap: 5rem;
       margin-top: 3rem;
       @media (max-width: 461px) {
         justify-content: center;
