--- a/src/components/Contact/style.module.scss
+++ b/src/components/Contact/style.module.scss
@@ -166,12 +166,14 @@
   line-height: 56px;
   letter-spacing: -0.96px;
 }
-.contact_text{
+.contact_text {
   display: flex;
   justify-content: start;
   flex-direction: column;
-  b{
+  b {
     margin-top: 1rem;
+    font-size: 19px;
+    color: var(--card-color);
   }
 }
 .contact_text p {
