--- a/src/components/Statistics/style.module.scss
+++ b/src/components/Statistics/style.module.scss
@@ -23,7 +23,7 @@
         &_stats{
             width: 100%;
             display: flex;
-            justify-content: center;
+            justify-content: space-evenly;
             align-items: center;
             flex-wrap: wrap;
             gap: 1rem;
@@ -32,12 +32,16 @@
                 position: relative;
                 width: calc(100% / 4 - 1rem);
                 display: flex;
+                background-color: white;
+                border-radius: 10px;
                 justify-content: center;
                 align-items: center;
                 flex-direction: column;
                 min-width: 250px;
                 height: 200px;
                 color: white;
+                flex-grow: 1;
+                gap: 2rem;
                 p{
                     position: absolute;
                     width: 100%;
@@ -51,7 +55,7 @@
                 h1{
                     font-size: 82px;
                     font-weight: 800;
-                    color: white;
+                    color: black;
                     // span.plusIcon{
                     //     position: absolute;
                     //     color: white;
