--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,20 +36,20 @@ body {
 }
 
 body::-webkit-scrollbar {
-  width: 4px;
+  width: 4px !important;
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #888;
+  background-color: #888 !important;
 }
 
 body::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
+  background-color: #f1f1f1 !important;
 }
 
 body {
-  scrollbar-width: 2px;
-  scrollbar-color: #888 #f1f1f1;
+  scrollbar-width: 2px !important;
+  scrollbar-color: #888 #f1f1f1 !important;
 }
 
 .container {
