--- a/src/components/Card/style.module.scss
+++ b/src/components/Card/style.module.scss
@@ -1,93 +1,93 @@
-.cardContainer{
-    height: 100vh;
+.cardContainer {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: sticky;
+  top: 0px;
+  .card {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    position: sticky;
-    top: 0px;
-    .card{
+    flex-direction: column;
+    position: relative;
+    top: -25%;
+    width: 100%;
+    border-radius: 25px;
+    padding: 50px;
+    transform-origin: top;
+    box-shadow: rgba(0, 0, 0, 0.355) 0px 3px 8px;
+    @media (max-width: 850px) {
+      width: 90%;
+    }
+    @media (max-width: 650px) {
+      width: 97%;
+    }
+    @media (max-width: 500px) {
+      padding: 20px;
+    }
+    h2 {
+      text-align: center;
+      margin: 0px;
+      font-size: 28px;
+    }
+    .body {
       display: flex;
-      flex-direction: column;
-      position: relative;
-      top: -25%;
-      width: 75%;
-      border-radius: 25px;
-      padding:50px;
-      transform-origin: top;
-      box-shadow: rgba(0, 0, 0, 0.355) 0px 3px 8px;
-      @media (max-width: 850px){
-        width: 90%;
+      height: 100%;
+      margin-top: 50px;
+      gap: 50px;
+      @media (max-width: 650px) {
+        flex-direction: column-reverse;
+        gap: 20px;
+        margin-top: 20px;
       }
-      @media (max-width: 650px){
-        width: 97%;
-      }
-      @media (max-width: 500px){
-        padding: 20px
-      }
-      h2{
-        text-align: center;
-        margin: 0px;
-        font-size: 28px;
-      }
-      .body{
-        display: flex;
-        height: 100%;
-        margin-top: 50px;
-        gap: 50px;
-        @media (max-width: 650px){
-          flex-direction: column-reverse;
-          gap: 20px;
-          margin-top: 20px;
+      .description {
+        width: 40%;
+        position: relative;
+        top: 10%;
+        @media (max-width: 650px) {
+          width: 100%;
         }
-        .description{
-          width: 40%;
-          position: relative;
-          top: 10%;
-          @media (max-width: 650px){
-            width: 100%;
-          }
-          p{
-            font-size: 16px;
-            &::first-letter{
-              font-size: 28px;
-              font-family: 'Title';
-            }
-          }
-          span{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            cursor: pointer;
-            background-color: transparent;
-            margin-top: 10px;
-            font-size: 32px;
-            &:hover{
-              background-color: white;
-            }
+        p {
+          font-size: 16px;
+          &::first-letter {
+            font-size: 28px;
+            font-family: "Title";
           }
         }
-  
-        .imageContainer{
-          position: relative;
-          width: 60%;
-          height: 85%;
-          max-height: 300px;
-          border-radius: 25px;
-          overflow: hidden;
-          @media (max-width: 650px){
-            width: 100%;
+        span {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          cursor: pointer;
+          background-color: transparent;
+          margin-top: 10px;
+          font-size: 32px;
+          &:hover {
+            background-color: white;
           }
-          .inner{
-            width: 100%;
-            height: 100%;
-          }
-          img{
-            object-fit: contain;
-          }
+        }
+      }
+
+      .imageContainer {
+        position: relative;
+        width: 60%;
+        height: 85%;
+        max-height: 300px;
+        border-radius: 25px;
+        overflow: hidden;
+        @media (max-width: 650px) {
+          width: 100%;
+        }
+        .inner {
+          width: 100%;
+          height: 100%;
+        }
+        img {
+          object-fit: contain;
         }
       }
     }
   }
+}
