--- a/src/components/Loader/style.css
+++ b/src/components/Loader/style.css
@@ -4,13 +4,20 @@
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 0 20px;
   background: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 9999;
+  text-align: center;
   opacity: 1;
   transition: opacity 1s;
+}
+
+.loader span {
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .hidden {
@@ -24,3 +31,9 @@
   align-items: center;
   justify-content: center;
 } */
+
+@media (max-width: 700px) {
+  .loader span {
+    font-size: 24px;
+  }
+}
